--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ethers": "^5.6.4",
     "next": "^13",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "use-sound": "^4.0.1"
   },
   "devDependencies": {
     "@types/node": "^18.11.12",
